2005-07-07  Roland Clobus <rclobus@bigfoot.com>
	* client/common/gnocatan.c renamed to main.c
	* meta-server/gnocatan-meta-server.c renamed to main.c
	* server/server.c renamed to main.c
	* server/gnocatan-server.c renamed to admin.c, contains only admin
	code
	* server/gnocatan-server.h renamed to admin.h, contains only admin
	code
	* server/gtk/gnocatan-server-gtk.c renamed to main.c
	* server/server.c, server/server.h: moved server code from admin.c and
	admin.h to these files
	* client/common/Makefile.am, meta-server/Makefile.am, po/POTFILES.in,
	server/Makefile.am, server/gtk/Makefile.am: use the renamed files
	* pioneers.spec.in: Updated home page
	
2005-07-03  Roland Clobus <rclobus@bigfoot.com>
	* common/gtk/guimap.c, editor/gtk/editor.c: Use the Q_() macro for the
	short translatable strings
	
2005-07-02  Roland Clobus <rclobus@bigfoot.com>
	* client/help/C/pioneers.xml: Updated link to homepage
	* client/common/client.c: fixed the hello string (protocol change)
	
2005-06-29  Roland Clobus <rclobus@bigfoot.com>
	* client/help/C/pioneers-C.omf, client/help/C/pioneers.xml: 
	  updated help pages
	* docs/pioneers-meta-server.6, docs/pioneers-server-console.6, 
	  docs/pioneers-server-gtk.6, docs/pioneers.6, docs/pioneersai.6:
	  updated man pages
	* client/gtk/offline: use Pioneers settings
	* docs/README.states: fix use of "Gnocatan"
	* client/gtk/gameover.c: Last translatable string with Gnocatan.
	* README, README.Cygwin, client/ai/ai.c, common/network.c,
	  common/network.h, editor/gtk/editor.c, meta-server/README.protocol,
	  meta-server/gnocatan-meta-server.c, server/archipel_gold.game,
	  server/crane_island.game, server/gnocatan-server.c, server/pregame.c,
	  server/gtk/gnocatan-server-gtk.c: Use "Pioneers" in the README
	  files, renamed 'get_gnocatan_dir' to 'get_pioneers_dir', updated
	  protocol for the hello message, use settings for Pioneers.
	  
	* server/buildutil.c, server/develop.c, server/discard.c,